--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,8 @@
-blinker==1.3
-cached-property==1.3.0
-chardet==2.3.0
-cloud-init==0.7.9
-colorama==0.3.9
-command-not-found==0.3
-configobj==5.0.6
-cryptography==1.2.3
-docker==2.3.0
-docker-compose==1.13.0
-docker-pycreds==0.2.1
-dockerpty==0.4.1
-docopt==0.6.2
-idna==2.0
-Jinja2==2.8
-jsonpatch==1.10
-jsonpointer==1.9
-jsonschema==2.6.0
-language-selector==0.1
-MarkupSafe==0.23
-oauthlib==1.0.3
-prettytable==0.7.2
-pyasn1==0.1.9
-pycurl==7.43.0
-pygobject==3.20.0
-PyJWT==1.3.0
-pyserial==3.0.1
-python-apt==1.1.0b1
-python-debian==0.1.27
-python-systemd==231
-PyYAML==3.11
-requests==2.9.1
+beautifulsoup4==4.6.0
+bs4==0.0.1
+html5lib==0.999999999
+mechanize==0.3.3
 six==1.10.0
-ssh-import-id==5.5
-texttable==0.8.8
-ufw==0.35
-unattended-upgrades==0.1
-urllib3==1.13.1
-virtualenv==15.0.1
-websocket-client==0.42.1
+webencodings==0.5.1
+Flask==0.12
+flask-restful==0.3.5
